--- a/index.html
+++ b/index.html
@@ -7,5 +7,64 @@
 
   <body>
 
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <img src="./resources/logo.png">
+      <span>SECRET AGENT SUPPLY INC.</span>
+    </div>
+  </header>
+
+<!--Bikes Section -->
+  <div class="bikes">
+    <div class="bikes-txt">
+      <span>NEW ARRIVAL</span>
+      <span>SPORT BIKES AND MOTORCYCLES</span>
+    </div>
+  </div>
+
+<!-- Navigation -->
+  <div class="nav">
+    <a href="#">Eyewear</a>
+    <a href="#">Apparel</a>
+    <a href="#">Gadgets</a>
+    <a href="#">Vehicles</a>
+    <a href="#">Glasses</a>
+    <a href="#">Contact</a>
+  </div>
+
+<!-- Products -->
+  <div class="products-container">
+    <div class="products-child">
+      <img src="./resources/pen.png" alt="Exploding Pen">
+      <span>Exploding Pen</span>
+    </div>
+    <div class="products-child">
+      <img src="./resources/watch.png" alt="Cellular Watch">
+      <span>Cellular Watch</span>
+    </div>
+    <div class="products-child">
+      <img src="./resources/glasses.png" alt="Thermal Glasses">
+      <span>Thermal Glasses</span>
+    </div>
+  </div>
+
+<!-- Location and Hours Section -->
+  <div class="info">
+    <div class="location">
+      <span>Location</span>
+      <span>-47.346436, 84.32354</span>
+    </div>
+    <div class="Hours">
+      <span>Hours</span>
+      <span>0800 - 1800</span>
+    </div>
+  </div>
+
+<!-- Footer -->
+  <footer>
+    <span>Copyright Secret Agent Supply Inc.</span>
+  </footer>
+
   </body>
 </html>
