Header and Body CSS.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Secret Agent Supply Inc.</title>
     <link rel="stylesheet" href="./resources/reset.css" type="text/css">
+    <link rel="stylesheet" href="./resources/style.css" type="text/css">
   </head>
 
   <body>
