Add CSS first draft.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
 <!--Bikes Section -->
   <div class="bikes">
+    <img src="./resources/moto.jpeg">
     <div class="bikes-txt">
-      <span>NEW ARRIVAL</span>
-      <span>SPORT BIKES AND MOTORCYCLES</span>
+      <span class="line1">NEW ARRIVAL</span>
+      <span class="line2">SPORT BIKES AND MOTORCYCLES</span>
     </div>
   </div>
 
@@ -53,12 +54,12 @@
 <!-- Location and Hours Section -->
   <div class="info">
     <div class="location">
-      <span>Location</span>
-      <span>-47.346436, 84.32354</span>
+      <span class="location1">Location</span>
+      <span class="location2">-47.346436, 84.32354</span>
     </div>
-    <div class="Hours">
-      <span>Hours</span>
-      <span>0800 - 1800</span>
+    <div class="hours">
+      <span class="hours1">Hours</span>
+      <span class="hours2">0800 - 1800</span>
     </div>
   </div>
 
