Apply solution CSS and HTMl labels, final commit.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container">
       <div class="bikes-txt">
         <!--<img src="./resources/moto.jpeg">-->
-        <span class="line1">NEW ARRIVAL</span>
-        <span class="line2">SPORT BIKES AND MOTORCYCLES</span>
+        <h4>NEW ARRIVAL</h4>
+        <h1>SPORT BIKES AND MOTORCYCLES</h1>
       </div>
     </div>
   </div>
@@ -37,33 +37,35 @@
     <li>Glasses</li>
     <li>Contact</li>
   </ul>
+  <ul class="mobile-nav">
+    <li>Menu</li>
+  </ul>
 </nav>
 
 <!-- Products -->
 <div class="container">
-  <div class="products-parent">
-    <div class="products-child">
-      <div class="products-img">
+  <div class="products">
+    <div class="product">
+      <div class="product-img">
         <img src="./resources/pen.png" alt="Exploding Pen">
       </div>
       <span class="description">Exploding Pen</span>
     </div>
-    <div class="products-child">
-      <div class="products-img">
+    <div class="product watch">
+      <div class="product-img">
         <img src="./resources/watch.png" alt="Cellular Watch">
       </div>
       <span class="description">Cellular Watch</span>
     </div>
-    <div class="products-child">
-      <div class="products-img">
+    <div class="product glasses">
+      <div class="product-img">
         <img src="./resources/glasses.png" alt="Thermal Glasses">
       </div>
       <span class="description">Thermal Glasses</span>
     </div>
   </div>
-</div>
 
-<!-- Location and Hours Section -->
+
   <div class="container">
     <div class="business-info">
       <div class="info">
@@ -76,6 +78,7 @@
       </div>
     </div>
   </div>
+</div>
 
 <!-- Footer -->
   <footer>
